Final Updates for css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,6 +160,7 @@ a{
 .footer{
     position: absolute;
     left: 0%;
+    bottom: 0;
     margin-top: 105px; 
     display: inline-block;
     font-size: 10px;
